Fixed spacing between navbar and about

--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ a:hover{
 @media screen and (min-width: 768px) {
   
   .navBar{
-    position: relative;
+    position: fixed;
     flex-direction: row;
     flex-wrap: nowrap;
     background-color: #20100D;
@@ -165,6 +165,11 @@ html {
 /*******************
 02. BANNER
 *******************/
+
+ul.indicators{
+   margin:0;
+}
+
 .react-slideshow-container .default-nav:last-of-type {
    margin-left: -1rem;
    margin-right: -0.5rem;
@@ -174,11 +179,12 @@ html {
   width: 100%;
   position: relative;
   margin: auto;
+  background: #f2e6d6;
 }
 
 .containerBanner img {
-  width: 90%;
-  margin: auto;
+  width: 100%;
+  margin: 0;
 }
 
 /*******************
